# model-multiplicity-cyberdef

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  smoke.yaml
mmcyber/: __init__.py  cli.py  data.py  disagreement.py  explanation_disagreement.py  model.py  plotting.py  shap_analysis.py  train.py  utils.py
notes/: uploaded_papers_model_multiplicity_links.md
paper/: WRITING_STATE.md  main.tex  references.bib
paper/Overleaf-Stand/: main.tex  references.bib
paper/Overleaf-Stand/header/: 01_Package.tex  02_Title.tex  03_Author.tex
paper/Overleaf-Stand/sections/: Acronyms.tex  background.tex  experiments.tex  introduction.tex  methodology.tex  motivation.tex  results.tex
paper/newest results/nslkdd_multiplicity/: class_names.csv  config.resolved.json  disagreement_summary.csv  explanation_disagreement.csv  feature_names.csv  metrics.csv  multiplicity_summary.csv  preprocessor.joblib  sample_disagreement.csv  shap_summary.csv  shap_variability_correlations.csv
paper/newest results/nslkdd_multiplicity/models/: seed1_frac0p5.pt  seed1_frac0p75.pt  seed1_frac1p0.pt  seed2_frac0p5.pt  seed2_frac0p75.pt  seed2_frac1p0.pt  seed3_frac0p5.pt  seed3_frac0p75.pt  seed3_frac1p0.pt  seed4_frac0p5.pt  seed4_frac0p75.pt  seed4_frac1p0.pt  seed5_frac0p5.pt  seed5_frac0p75.pt  seed5_frac1p0.pt
paper/newest results/nslkdd_multiplicity/shap_values/: seed1_frac0p5.npz  seed1_frac0p75.npz  seed1_frac1p0.npz  (+12 more)
paper/sections/: conclusion.tex  discussion.tex  experiments.tex  introduction.tex  methodology.tex  motivation.tex  results.tex
