[project]
name = "model-multiplicity-cyber"
version = "0.1.0"
description = "Model multiplicity experiments for neural intrusion detection."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "joblib>=1.3",
  "matplotlib>=3.8",
  "numpy>=1.24",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "scikit-learn>=1.3",
  "seaborn>=0.13",
  "shap>=0.44",
  "torch>=2.1",
  "tqdm>=4.66",
]

[project.scripts]
mmcyber = "mmcyber.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mmcyber*"]
